Add task completion counter and update styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>TODO List</h1>
+        <p id="counter">Concluídas: 0</p>
         <div class="input-container">
             <input type="text" id="taskInput" placeholder="Adicionar nova tarefa...">
             <button id="addBtn">Adicionar</button>
