Criar lista de tarefas HTML

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO List</title>
+    <title>TODO Lista de Tarefas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>TODO List</h1>
+        <h1>TODO Lista de Tarefas</h1>
         <p id="counter">Concluídas: 0</p>
         <div class="input-container">
             <input type="text" id="taskInput" placeholder="Adicionar nova tarefa...">
