--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button id="addBtn">Adicionar</button>
         </div>
         <ul id="taskList"></ul>
+        <button id="clearAllBtn" class="clear-all-btn">Limpar Todas</button>
     </div>
     <script src="script.js"></script>
 </body>
